<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/AppTheme.AppBarOverlay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay"
        app:titleTextAppearance="@style/Toolbar_TextAppearance_White">

        <Button
            android:id="@+id/btn_select_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="16sp"
            android:background="@null"
            android:textSize="16sp"
            android:textColor="@color/newSecondAryText"
            android:text="@string/chart_select"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_white">
        <Spinner
            android:id="@+id/factory_spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:layout_weight="1"
            android:spinnerMode="dialog" />
            <!--android:dropDownWidth="match_parent"-->
            <!--android:spinnerMode="dropdown"-->
            <!--android:forceHasOverlappingRendering="false"-->
            <!--android:dropDownSelector="@color/bg_app"/>-->

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="@color/bg_app"
            android:layout_gravity="center_vertical" />

        <Spinner
            android:id="@+id/interval_spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:layout_weight="1"
            android:spinnerMode="dialog" />

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="@color/bg_app"
            android:layout_gravity="center_vertical" />

        <Spinner
            android:id="@+id/equipment_spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:layout_weight="1"
            android:spinnerMode="dialog" />

    </LinearLayout>
    <include layout="@layout/black_small_view"/>

    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/fragment_detail">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/bg_white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/chart_line_current"
                    android:textColor="@color/newColorPrimary"
                    android:textSize="18sp" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/LI_LineChart"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/bg_white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/chart_phase_current"
                    android:textColor="@color/newColorPrimary"
                    android:textSize="18sp" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/PI_LineChart"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/bg_white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/chart_line_voltage"
                    android:textColor="@color/newColorPrimary"
                    android:textSize="18sp" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/LU_LineChart"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/bg_white">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/chart_phase_voltage"
                    android:textColor="@color/newColorPrimary"
                    android:textSize="18sp" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/PU_LineChart"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp" />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/bg_white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/chart_modulus"
                android:textColor="@color/newColorPrimary"
                android:textSize="18sp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/P_LineChart"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/bg_white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/chart_degree"
                android:textColor="@color/newColorPrimary"
                android:textSize="18sp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/K_LineChart"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>